src/db/migration/sea_orm/timestamp/snapshots/roadster__db__migration__sea_orm__timestamp__tests__drop_update_timestamp_function@case_01.snap
---
source: src/db/migration/sea_orm/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "DROP FUNCTION IF EXISTS update_timestamp_updated_at;",
        values: None,
        db_backend: Postgres,
    },
)
