src/db/migration/sea_orm/timestamp/snapshots/roadster__db__migration__sea_orm__timestamp__tests__drop_update_timestamp_trigger@case_1.snap
---
source: src/db/migration/sea_orm/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "DROP TRIGGER IF EXISTS foo_update_timestamp_updated_at ON public.foo;",
        values: None,
        db_backend: Postgres,
    },
)
