src/db/migration/sea_orm/timestamp/snapshots/roadster__db__migration__sea_orm__timestamp__tests__fn_query_strings.snap
---
source: src/db/migration/sea_orm/timestamp/mod.rs
expression: fn_query_strings
---
FnQueryStrings {
    timestamp_column: "updated_at",
    dep_column: None,
    fn_name: "update_timestamp_updated_at",
    fn_call: "update_timestamp_updated_at()",
}
